# model-auditor

./: .gitignore  README.md  frontend.md
agent-engine/: orchestrator.py
backend/: .gitignore  init_db.py  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 5d21799b7013_init_schema.py  90772c8075ae_add_agent_configs.py  add_users_table.py
backend/app/: main.py
backend/app/api/routes/: agents.py  auth.py  logs.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: agent_config.py  agent_schema.py  auth_schema.py  log_schema.py
backend/app/services/: agent_service.py  auth_service.py  log_service.py  policy_service.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/ui/: agent-card.tsx  animated-button.tsx  animated-sidebar.tsx  dashboard-layout.tsx  log-row.tsx  modal.tsx  page-transition.tsx  sidebar.tsx  skeleton.tsx  stat-card.tsx  status-badge.tsx
frontend/src/contexts/: auth-context.tsx
scripts/: start_agent_engine.sh  start_backend.sh
